--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,10 @@
 fastapi
 uvicorn
-python-multipart
-requests
-aiofiles
+sqlalchemy
 pydantic
-numpy
-scikit-learn
-transformers
-torch
 python-dotenv
+faiss-cpu
+sentence-transformers
+pdf2image
+pillow
+pytesseract
